--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,11 +2,11 @@
 <p>Find me in app/views/products/new.html.erb</p>
 
 
-<%= form_with model: @products do |form| %>
+<%= form_with model: @product do |form| %>
   <%= form.text_field :name %>
   <%= form.text_area :description %>
   <%= form.number_field :price %>
   <%= form.submit "Create" %>
 <% end %>
 
-<%= link_to "Back", product_path %>
+<%= link_to("Back", products_path) %>
