--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,2 +1,11 @@
 <h1>Products#edit</h1>
 <p>Find me in app/views/products/edit.html.erb</p>
+
+<%= form_with model: @product do |form| %>
+  <%= form.text_field :name %>
+  <%= form.text_area :description %>
+  <%= form.number_field :price %>
+  <%= form.submit "Update...!" %>
+<% end %>
+
+<%= link_to("Back", products_path) %>
