--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,11 @@
   <%= product.price %>
   <%= link_to("Show", product_path(product)) %>
   <%= link_to("Edit", edit_product_path(product)) %>
-<%  } %>
-<%= link_to("New", new_product_path) %>
+  <%= link_to "Delete!", product_path(product), data: {
+    turbo_method: :delete,
+    turbo_confirm: "Are you sure?"
+  } %>
 
+<%  } %>
+<br/>
+<%= link_to("New", new_product_path) %>
